--- a/Module2/home_work/03_hw.md
+++ b/Module2/home_work/03_hw.md
@@ -21,7 +21,14 @@
 ### Решение задачи
 
 ```python
-# TODO: you code here...
+loch1 = int(input("Введите координату первой точки по горизонтали "))
+locv1 = int(input("Введите координату первой точки по вертикали "))
+loch2 = int(input("Введите координату второй точки по горизонтали "))
+locv2 = int(input("Введите координату второй точки по вертикали "))
+if (loch1+locv1+loch2+locv2)%2==0:
+    print("Yes")
+else:
+    print("No")
 ```
 
 ---
